2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Fabrication__c/Carton_Fabrication__c.object-meta.xml
<CustomObject>
    <label>Carton Fabrication</label>
    <nameField>
        <displayFormat>CRB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carton Fabrications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>