2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Fabrication__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Job_Reference__r.Client_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client 客户名称</label>
    <type>Text</type>
</CustomField>