2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Fabrication__c/fields/CS_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_No__c</fullName>
    <formula>IF( AND( Owner:User.Phone != NULL, Owner:User.MobilePhone == NULL), Owner:User.Phone, 
IF(AND( Owner:User.Phone == NULL, Owner:User.MobilePhone != NULL), Owner:User.MobilePhone, 
IF(AND( Owner:User.Phone != NULL, Owner:User.MobilePhone != NULL), Owner:User.Phone, null 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Contact No.:</label>
    <type>Text</type>
</CustomField>