2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Fabrication__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Reference 工作编号</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipLabel>Carton Fabrications</relationshipLabel>
    <relationshipName>Carton_Fabrications</relationshipName>
    <type>Lookup</type>
</CustomField>