2nd training/Community/Community/Community1/force-app/main/default/objects/Carton_Fabrication__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <label>Required Date 需要日期</label>
    <type>Date</type>
</CustomField>